# stash

./: CMakeLists.txt
archive/: pcm_test.cpp
cmakemodules/: FindCmph.cmake  FindDivsufsort.cmake  FindPCM.cmake  FindPlads.cmake  FindPowercap.cmake  FindTLX.cmake
include/bvcc/dinklage/: bit_vector.hpp  bit_vector_rank.hpp  bit_vector_select.hpp  int_vector.hpp  util.hpp
include/bvcc/naive/: bit_vector.hpp  bit_vector_rank.hpp  bit_vector_select.hpp
include/code/: ASCII.hpp  Binary.hpp  CoderBase.hpp  Coding.hpp  Delta.hpp  Delta0.hpp  MTF.hpp  ascii_coder.hpp  binary_coder.hpp  coder.hpp  coding.hpp  delta0_coder.hpp  delta_coder.hpp  mtf_coder.hpp
include/huff/: AdaptiveHuffmanBase.hpp  DynamicHuffmanBase.hpp  Forward.hpp  Huffman52.hpp  HuffmanBase.hpp  Hybrid.hpp  Knuth85.hpp  adaptive_huffman_coder_base.hpp  forward_coder.hpp  huffman52.hpp  huffman_coder.hpp  huffman_coder_base.hpp  hybrid_coder.hpp  knuth85.hpp  knuth_coder.hpp
include/io/: LoadFile.hpp  bit_istream.hpp  bit_ostream.hpp  bitistream.hpp  bitostream.hpp
include/pred/: BinSearch.hpp  CacheBinSearch.hpp  HashBinSearch.hpp  IdxBinSearch.hpp  RankSelect.hpp  Result.hpp  TwoLevelBinSearch.hpp  TwoLevelCacheBinSearch.hpp  binary_search.hpp  binary_search_cache.hpp  binsearch.hpp  binsearch_cache.hpp  fast_idx_binary_search.hpp  fast_idx_binary_search_sparse.hpp  idx_binary_search.hpp  idx_binary_search_civ.hpp  idx_binary_search_sparse.hpp  indexed.hpp  indexed_compact.hpp  indexed_sparse.hpp  rank.hpp  rank_select.hpp  result.hpp  sample.hpp  sampled.hpp  two_level_binary_search.hpp  util.hpp
include/rapl/: Power.hpp  Reader.hpp  energy.hpp  error.hpp  power.hpp  reader.hpp
include/stash/civ/: unary_sorted_sequence.hpp
include/stash/code/: ascii_coder.hpp  binary_coder.hpp  coder.hpp  coding.hpp  delta0_coder.hpp  delta_coder.hpp  mtf_coder.hpp
include/stash/ext/: thrill_common_uint_types.hpp
include/stash/hash/: linear_probing.hpp  quadratic_probing.hpp  table.hpp
include/stash/huff/: adaptive_huffman_coder_base.hpp  forward_coder.hpp  huffman_coder.hpp  huffman_coder_base.hpp  hybrid_coder.hpp  knuth_coder.hpp
include/stash/io/: bit_istream.hpp  bit_ostream.hpp  load_file.hpp
include/stash/pred/: README.md  binsearch.hpp  binsearch_cache.hpp  index.hpp  index_compact.hpp  index_sparse.hpp  indexed.hpp  indexed_compact.hpp  indexed_sparse.hpp  rank.hpp  sample.hpp  tree3.hpp  util.hpp
include/stash/rapl/: config.hpp  energy.hpp  energy_buffer.hpp  power.hpp  reader.hpp
include/stash/util/: file_size.hpp  likely.hpp  math.hpp  random.hpp  rank16_lut.hpp  rank8_lut.hpp  time.hpp  uint128.hpp  uint40.hpp  uint48.hpp  uint_types.hpp
include/stash/vec/: bit_rank.hpp  bit_select.hpp  bit_vector.hpp  int_vector.hpp
include/util/: MallocCallback.hpp  Time.hpp  assert.hpp  file_size.hpp  math.hpp  uint_types.hpp
include/vec/: BitVector.hpp  IntVector.hpp  Rank.hpp  Select.hpp  bit_rank.hpp  bit_select.hpp  bit_vector.hpp  int_vector.hpp  util.hpp
include/vec/civ/: unary_sorted_sequence.hpp
src/: CMakeLists.txt  bvcc.cpp  bwt.cpp  coding.cpp  hash.cpp  interface.cpp  malloc.cpp  numbers.cpp  pcm_test.cpp  plads.cpp  pred.cpp  rank.cpp  rapl_test.cpp  runs.cpp  sandbox.cpp  sum.cpp
